🐛 fixed word wrapping in cards

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -101,6 +101,8 @@ body {
   margin: 10px;
   transition: all 250ms;
   cursor: move;
+  overflow: hidden;
+  word-wrap: break-word;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
